--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: easy_form
 description: Easy, fast and friendlly way to create and manage forms for Firestore
 version: 0.0.1
-homepage:
+homepage: https://github.com/DameAri/easy_form
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
@@ -10,6 +10,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cloud_firestore: ^3.1.7
+  handy_dialogs: ^0.0.5
+  my_device: ^0.0.5
 
 dev_dependencies:
   flutter_test:
